5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3997/executions/1635_2446.log
== TEST (2019-04-10 14:15:08) 
-- CODE:
senha = int(input("digite um nmr (6 digitos):"))
d1 = nmr//100000
d2 = (nmr//10000) % 10
d3 = (nmr//1000) % 10
d4 = (nmr//100) % 10
d5 = (nmr//10) % 10
d6 = (nmr//1) % 10

if ((d2+d4+d6) % (d1+d3+d5) !=0):
	print("senha valida")
else:
	print("acesso liberado")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    d1 = nmr//100000
NameError: name 'nmr' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:15:22) 
-- CODE:
senha = int(input("digite um nmr (6 digitos):"))
d1 = nmr//100000
d2 = (nmr//10000) % 10
d3 = (nmr//1000) % 10
d4 = (nmr//100) % 10
d5 = (nmr//10) % 10
d6 = (nmr//1) % 10

if ((d2+d4+d6) % (d1+d3+d5) !=0):
	print("senha valida")
else:
	print("acesso liberado")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    d1 = nmr//100000
NameError: name 'nmr' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:15:27) 
-- CODE:
senha = int(input("digite um nmr (6 digitos):"))
d1 = nmr//100000
d2 = (nmr//10000) % 10
d3 = (nmr//1000) % 10
d4 = (nmr//100) % 10
d5 = (nmr//10) % 10
d6 = (nmr//1) % 10

if ((d2+d4+d6) % (d1+d3+d5) !=0):
	print("senha valida")
else:
	print("acesso liberado")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    d1 = nmr//100000
NameError: name 'nmr' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 14:15:47) 
-- CODE:
nmr = int(input("digite um nmr (6 digitos):"))
d1 = nmr//100000
d2 = (nmr//10000) % 10
d3 = (nmr//1000) % 10
d4 = (nmr//100) % 10
d5 = (nmr//10) % 10
d6 = (nmr//1) % 10

if ((d2+d4+d6) % (d1+d3+d5) !=0):
	print("senha valida")
else:
	print("acesso liberado")

-- EXECUTION TIME:
0.196074
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha valida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:15:49) 
-- CODE:
nmr = int(input("digite um nmr (6 digitos):"))
d1 = nmr//100000
d2 = (nmr//10000) % 10
d3 = (nmr//1000) % 10
d4 = (nmr//100) % 10
d5 = (nmr//10) % 10
d6 = (nmr//1) % 10

if ((d2+d4+d6) % (d1+d3+d5) !=0):
	print("senha valida")
else:
	print("acesso liberado")

-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:15:55) 
-- CODE:
nmr = int(input("digite um nmr (6 digitos):"))
d1 = nmr//100000
d2 = (nmr//10000) % 10
d3 = (nmr//1000) % 10
d4 = (nmr//100) % 10
d5 = (nmr//10) % 10
d6 = (nmr//1) % 10

if ((d2+d4+d6) % (d1+d3+d5) !=0):
	print("senha valida")
else:
	print("acesso liberado")

-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 14:16:04) 
-- CODE:
nmr = int(input("digite um nmr (6 digitos):"))
d1 = nmr//100000
d2 = (nmr//10000) % 10
d3 = (nmr//1000) % 10
d4 = (nmr//100) % 10
d5 = (nmr//10) % 10
d6 = (nmr//1) % 10

if ((d2+d4+d6) % (d1+d3+d5) !=0):
	print("senha valida")
else:
	print("acesso liberado")

-- EXECUTION TIME:
0.139854
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha valida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:17:09) 
-- CODE:
nmr = int(input("digite um nmr (6 digitos):"))
d1 = nmr//100000
d2 = (nmr//10000) % 10
d3 = (nmr//1000) % 10
d4 = (nmr//100) % 10
d5 = (nmr//10) % 10
d6 = (nmr//1) % 10

if ((d2+d4+d6) % (d1+d3+d5) !=0):
	print("senha valida")
else:
	print("acesso liberado")

-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:17:28) 
-- CODE:
nmr = int(input("digite um nmr (6 digitos):"))
d1 = nmr//100000
d2 = (nmr//10000) % 10
d3 = (nmr//1000) % 10
d4 = (nmr//100) % 10
d5 = (nmr//10) % 10
d6 = (nmr//1) % 10

if ((d2+d4+d6) % (d1+d3+d5) !=0):
	print("senha valida")
else:
	print("acesso liberado")

-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 14:17:41) 
-- CODE:
nmr = int(input("digite um nmr (6 digitos):"))
d1 = nmr//100000
d2 = (nmr//10000) % 10
d3 = (nmr//1000) % 10
d4 = (nmr//100) % 10
d5 = (nmr//10) % 10
d6 = (nmr//1) % 10

if ((d2+d4+d6) % (d1+d3+d5) !=0):
	print("senha valida")
else:
	print("acesso liberado")

-- EXECUTION TIME:
0.188396
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha valida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:17:46) 
-- CODE:
nmr = int(input("digite um nmr (6 digitos):"))
d1 = nmr//100000
d2 = (nmr//10000) % 10
d3 = (nmr//1000) % 10
d4 = (nmr//100) % 10
d5 = (nmr//10) % 10
d6 = (nmr//1) % 10

if ((d2+d4+d6) % (d1+d3+d5) !=0):
	print("senha valida")
else:
	print("acesso liberado")

-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 14:17:59) 
-- CODE:
nmr = int(input("digite um nmr (6 digitos):"))
d1 = nmr//100000
d2 = (nmr//10000) % 10
d3 = (nmr//1000) % 10
d4 = (nmr//100) % 10
d5 = (nmr//10) % 10
d6 = (nmr//1) % 10

if ((d2+d4+d6) % (d1+d3+d5) !=0):
	print("senha valida")
else:
	print("acesso liberado")

-- EXECUTION TIME:
0.162633
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha valida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:21:28) 
-- CODE:
nmr = int(input("digite um nmr (6 digitos):"))
d1 = nmr//100000
d2 = (nmr//10000) % 10
d3 = (nmr//1000) % 10
d4 = (nmr//100) % 10
d5 = (nmr//10) % 10
d6 = (nmr//1) % 10

if ((d2+d4+d6) % (d1+d3+d5) !=0):
	print("senha valida")
else:
	print("acesso liberado")

-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:21:34) 
-- CODE:
nmr = int(input("digite um nmr (6 digitos):"))
d1 = nmr//100000
d2 = (nmr//10000) % 10
d3 = (nmr//1000) % 10
d4 = (nmr//100) % 10
d5 = (nmr//10) % 10
d6 = (nmr//1) % 10

if ((d2+d4+d6) % (d1+d3+d5) !=0):
	print("senha valida")
else:
	print("acesso liberado")

-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:21:47) 
-- CODE:
nmr = int(input("digite um nmr (6 digitos):"))
d1 = nmr//100000
d2 = (nmr//10000) % 10
d3 = (nmr//1000) % 10
d4 = (nmr//100) % 10
d5 = (nmr//10) % 10
d6 = (nmr//1) % 10

if ((d2+d4+d6) % (d1+d3+d5) !=0):
	print("senha valida")
else:
	print("acesso liberado")

-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:21:51) 
-- CODE:
nmr = int(input("digite um nmr (6 digitos):"))
d1 = nmr//100000
d2 = (nmr//10000) % 10
d3 = (nmr//1000) % 10
d4 = (nmr//100) % 10
d5 = (nmr//10) % 10
d6 = (nmr//1) % 10

if ((d2+d4+d6) % (d1+d3+d5) !=0):
	print("senha valida")
else:
	print("acesso liberado")

-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 14:21:58) 
-- CODE:
nmr = int(input("digite um nmr (6 digitos):"))
d1 = nmr//100000
d2 = (nmr//10000) % 10
d3 = (nmr//1000) % 10
d4 = (nmr//100) % 10
d5 = (nmr//10) % 10
d6 = (nmr//1) % 10

if ((d2+d4+d6) % (d1+d3+d5) !=0):
	print("senha valida")
else:
	print("acesso liberado")

-- EXECUTION TIME:
0.1705
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha valida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:22:35) 
-- CODE:
nmr = int(input("digite uma senha (6 digitos):"))
d1 = nmr//100000
d2 = (nmr//10000) % 10
d3 = (nmr//1000) % 10
d4 = (nmr//100) % 10
d5 = (nmr//10) % 10
d6 = (nmr//1) % 10

if ((d2+d4+d6) % (d1+d3+d5) !=0):
	print("senha valida")
else:
	print("acesso liberado")

-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 14:22:46) 
-- CODE:
nmr = int(input("digite uma senha (6 digitos):"))
d1 = nmr//100000
d2 = (nmr//10000) % 10
d3 = (nmr//1000) % 10
d4 = (nmr//100) % 10
d5 = (nmr//10) % 10
d6 = (nmr//1) % 10

if ((d2+d4+d6) % (d1+d3+d5) !=0):
	print("senha valida")
else:
	print("acesso liberado")

-- EXECUTION TIME:
0.141101
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha valida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:23:45) 
-- CODE:
nmr = int(input("digite uma senha: "))
d1 = nmr//100000
d2 = (nmr//10000) % 10
d3 = (nmr//1000) % 10
d4 = (nmr//100) % 10
d5 = (nmr//10) % 10
d6 = (nmr//1) % 10

if ((d2+ d4+ d6) % (d1+ d3+ d5) !=0):
	print("senha valida")
else:
	print("acesso liberado")

-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:24:01) 
-- CODE:
nmr = int(input("digite uma senha: "))
d1 = nmr//100000
d2 = (nmr//10000) % 10
d3 = (nmr//1000) % 10
d4 = (nmr//100) % 10
d5 = (nmr//10) % 10
d6 = (nmr//1) % 10

if ((d2+ d4+ d6) % (d1+ d3+ d5) !=0):
	print("senha valida")
else:
	print("acesso liberado")

-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:24:10) 
-- CODE:
nmr = int(input("digite uma senha: "))
d1 = nmr//100000
d2 = (nmr//10000) % 10
d3 = (nmr//1000) % 10
d4 = (nmr//100) % 10
d5 = (nmr//10) % 10
d6 = (nmr//1) % 10

if ((d2+ d4+ d6) % (d1+ d3+ d5) !=0):
	print("senha valida")
else:
	print("acesso liberado")

-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 14:24:45) 
-- CODE:
nmr = int(input("digite uma senha: "))
d1 = nmr//100000
d2 = (nmr//10000) % 10
d3 = (nmr//1000) % 10
d4 = (nmr//100) % 10
d5 = (nmr//10) % 10
d6 = (nmr//1) % 10

if ((d2+ d4+ d6) % (d1+ d3+ d5) !=0):
	print("senha valida")
else:
	print("acesso liberado")

-- EXECUTION TIME:
0.163223
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha valida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:25:13) 
-- CODE:
nmr = int(input("digite uma senha: "))
d1 = nmr//100000
d2 = (nmr//10000) % 10
d3 = (nmr//1000) % 10
d4 = (nmr//100) % 10
d5 = (nmr//10) % 10
d6 = (nmr//1) % 10

if ((d2+ d4+ d6) % (d1+ d3+ d5) !=0):
	print("senha valida")
else:
	print("acesso liberado")

-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:25:22) 
-- CODE:
nmr = int(input("digite uma senha: "))
d1 = nmr//100000
d2 = (nmr//10000) % 10
d3 = (nmr//1000) % 10
d4 = (nmr//100) % 10
d5 = (nmr//10) % 10
d6 = (nmr//1) % 10

if ((d2+ d4+ d6) % (d1+ d3+ d5) !=0):
	print("senha valida")
else:
	print("acesso liberado")

-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 14:25:31) 
-- CODE:
nmr = int(input("digite uma senha: "))
d1 = nmr//100000
d2 = (nmr//10000) % 10
d3 = (nmr//1000) % 10
d4 = (nmr//100) % 10
d5 = (nmr//10) % 10
d6 = (nmr//1) % 10

if ((d2+ d4+ d6) % (d1+ d3+ d5) !=0):
	print("senha valida")
else:
	print("acesso liberado")

-- EXECUTION TIME:
0.185665
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha valida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:25:35) 
-- CODE:
nmr = int(input("digite uma senha: "))
d1 = nmr//100000
d2 = (nmr//10000) % 10
d3 = (nmr//1000) % 10
d4 = (nmr//100) % 10
d5 = (nmr//10) % 10
d6 = (nmr//1) % 10

if ((d2+ d4+ d6) % (d1+ d3+ d5) !=0):
	print("senha valida")
else:
	print("acesso liberado")

-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:28:42) 
-- CODE:
nmr = int(input("digite uma senha: "))
d1 = nmr//100000
d2 = (nmr//10000) % 10
d3 = (nmr//1000) % 10
d4 = (nmr//100) % 10
d5 = (nmr//10) % 10
d6 = (nmr//1) % 10

if ((d2+ d4+ d6) % (d1+ d3+ d5) !=0):
	print("senha valida")
else:
	print("acesso liberado")

-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 15:32:59) 
-- CODE:
nmr = int(input("digite uma senha: "))
d1 = nmr//100000
d2 = (nmr//10000) % 10
d3 = (nmr//1000) % 10
d4 = (nmr//100) % 10
d5 = (nmr//10) % 10
d6 = (nmr//1) % 10

if ((d2+ d4+ d6) % (d1+ d3+ d5) !=0):
	print("senha valida")
else:
	print("acesso liberado")

-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 15:34:17) 
-- CODE:
nmr = int(input("digite uma senha: "))
d1 = nmr//100000
d2 = (nmr//10000) % 10
d3 = (nmr//1000) % 10
d4 = (nmr//100) % 10
d5 = (nmr//10) % 10
d6 = (nmr//1) % 10

if ((d2+ d4+ d6) % (d1+ d3+ d5) !=0):
	print("senha valida")
else:
	print("acesso liberado")

-- EXECUTION TIME:
0.152793
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha valida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 15:43:44) 
-- CODE:
nmr = int(input("digite uma senha: "))
d1 = nmr//100000
d2 = (nmr//10000) % 10
d3 = (nmr//1000) % 10
d4 = (nmr//100) % 10
d5 = (nmr//10) % 10
d6 = (nmr//1) % 10

if ((d2+ d4+ d6) % (d1+ d3+ d5) !=0):
	print("senha valida")
else:
	print("acesso liberado")

-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 15:44:45) 
-- CODE:
nmr = int(input("digite uma senha: "))
d1 = nmr//100000
d2 = (nmr//10000) % 10
d3 = (nmr//1000) % 10
d4 = (nmr//100) % 10
d5 = (nmr//10) % 10
d6 = (nmr//1) % 10

if ((d2+ d4+ d6) % (d1+ d3+ d5) !=0):
	print("acesso liberado")
else:
	print("senha invalida")

-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 15:45:27) 
-- CODE:
nmr = int(input("digite uma senha: "))
d1 = nmr//100000
d2 = (nmr//10000) % 10
d3 = (nmr//1000) % 10
d4 = (nmr//100) % 10
d5 = (nmr//10) % 10
d6 = (nmr//1) % 10

if ((d2+ d4+ d6) % (d1+ d3+ d5) !=0):
	print("acesso liberado")
else:
	print("senha invalida")

-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 15:45:37) 
-- CODE:
nmr = int(input("digite uma senha: "))
d1 = nmr//100000
d2 = (nmr//10000) % 10
d3 = (nmr//1000) % 10
d4 = (nmr//100) % 10
d5 = (nmr//10) % 10
d6 = (nmr//1) % 10

if ((d2+ d4+ d6) % (d1+ d3+ d5) !=0):
	print("acesso liberado")
else:
	print("senha invalida")

-- EXECUTION TIME:
0.157995
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
senha invalida
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
acesso liberado
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
senha invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 15:52:08) 
-- CODE:
num = int(input("Digite uma senha:"))

d1 = num//100000
d2 = (num//10000) % 10
d3 = (num//1000) % 10
d4 = (num//100) % 10
d5 = (num//10) % 10
d6 = (num//1) % 10

if ((d2 + d4 + d6) % (d1 + d3 + d5) !0):
	print("senha invalida")
else:
	print("acesso liberado")
-- ERROR:
File "XXXX", line 10
    if ((d2 + d4 + d6) % (d1 + d3 + d5) !0):
                                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 15:52:42) 
-- CODE:
num = int(input("Digite uma senha:"))

d1 = num//100000
d2 = (num//10000) % 10
d3 = (num//1000) % 10
d4 = (num//100) % 10
d5 = (num//10) % 10
d6 = (num//1) % 10

if ((d2 + d4 + d6) % (d1 + d3 + d5) !=0):
	print("senha invalida")
else:
	print("acesso liberado")
-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 15:52:52) 
-- CODE:
num = int(input("Digite uma senha:"))

d1 = num//100000
d2 = (num//10000) % 10
d3 = (num//1000) % 10
d4 = (num//100) % 10
d5 = (num//10) % 10
d6 = (num//1) % 10

if ((d2 + d4 + d6) % (d1 + d3 + d5) !=0):
	print("senha invalida")
else:
	print("acesso liberado")
-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 15:53:46) 
-- CODE:
num = int(input("Digite uma senha:"))

d1 = num//100000
d2 = (num//10000) % 10
d3 = (num//1000) % 10
d4 = (num//100) % 10
d5 = (num//10) % 10
d6 = (num//1) % 10

if ((d2 + d4 + d6) % (d1 + d3 + d5) !=0):
	print("senha invalida")
else:
	print("acesso liberado")
-- EXECUTION TIME:
0.216686
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
